# purelymail

./: pyproject.toml
purelymail/: __init__.py  models.py  purelymail.py
tests/: purelymail_test.py
